# coronary_rws_analyser

./: .gitignore  CLAUDE.md  INSTALL_WINDOWS.bat  PROGRESS.md  README.md  START_BACKEND_WINDOWS.bat  START_FRONTEND_WINDOWS.bat  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.context/: 00-vision.md  01-requirements.md
.context/architecture/: overview.md
.context/domain/: rws-methodology.md  segmentation-model-architecture.md
akademik/: README.md
akademik/literature/segmentation-papers/: README.md
akademik/literature/similar-software/: README.md
python-backend/: .env.example  requirements.txt
python-backend/app/: __init__.py  main.py
python-backend/app/api/: __init__.py  calibration.py  dicom.py  export.py  qca.py  rws.py  segmentation.py  tracking.py
python-backend/app/core/: __init__.py  angiopy_segmentation.py  calibration_engine.py  centerline_extractor.py  dicom_handler.py  ecg_parser.py  nnunet_inference.py  qca_engine.py  rws_engine.py  tracking_engine.py  yolo_keypoint.py
python-backend/app/models/: __init__.py  schemas.py
scripts/: start-dev.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: index.ts
src/components/Panels/: index.ts  (+9 more)
src/hooks/: index.ts  useCanvasLayers.ts
src/lib/: api.ts  sessionUtils.ts
src/stores/: annotationStore.ts  calibrationStore.ts  dicomStore.ts  ecgStore.ts  exportStore.ts  index.ts  overlayStore.ts  playerStore.ts  qcaStore.ts  rwsStore.ts  segmentationStore.ts  trackingStore.ts
src/types/: index.ts
(+22 files in other folders)
