[package]
name = "coronary-rws-analyser"
version = "1.0.0"
description = "Open-source Radial Wall Strain analysis platform for coronary angiography"
authors = ["Coronary RWS Analyser Team"]
edition = "2021"

[lib]
name = "coronary_rws_analyser_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
